error_templates/java/test_files/cannot_be_applied_error/test.txt
template: "Java.CannotBeAppliedError"
---
CannotBeApplied.java:3: error: method addValues in class CannotBeApplied cannot be applied to given types;
        int result = addValues("5", 10); // Attempting to add a string and an integer
                     ^
  required: int,int
  found:    String,int
  reason: argument mismatch; String cannot be converted to int
1 error
===
template: "Java.CannotBeAppliedError"
---
aa
